<?xml version="1.0"?>
<package format="2">
  <name>plus_ros1_driver</name>
  <version>0.1.0</version>
  <description>plus ros1 driver</description>
  <maintainer email="neka-nat@todo.todo">neka-nat</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>joystick-drivers</exec_depend>
  <exec_depend>joy</exec_depend>

  <export>
  </export>
</package>